fix images being cropped

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,5 +42,4 @@ a:visited {
 
 img {
     max-width: 100%;
-    object-fit: cover;
 }
